@@ -1,2 +1,7 @@
 # battleship
 Simple JavaFX UI-based game
+
+## How to run
+- In order to run, you must download JavaFX framework SDK from [here](https://openjfx.io)
+- Add project external libraries to javafx lib folder containing *.jar files needed to build application
+- Add the following JVM options: --module-path <path-to-javafx-lib> --add-modules javafx.base,javafx.controls
